# PicassBot

./: .gitignore  README.md  cleanup_disk.sh  colab_training.ipynb  commands.sh  config.yaml  demo_dataset.py  demo_engine.py  demo_quickdraw.py  download_all_data.py  experiments_commands.md  generate_dataset_images.py  generate_samples.py  launch_tensorboard.sh  pyproject.toml  run_experiments.sh  test_latent_mpc.py  test_predictor.py
notes/: 01_datasets.md  02_data_preparation.md  03_search_strategies.md  04_policy.md  05_progress_journal.md  06_jepa_methodology.md  note_generale.md  plan_attaque.md  predictor.md
policy/: data.py  inference.py  jepa_model.py  joint_dataset.py  joint_model.py  predictor_data.py  train.py  train_jepa.py  train_joint.py  train_predictor.py
research/: latent_mpc.py  make_gifs.py  run_experiments.py  strategies.py  strategies_header.py
src/picassbot/: __init__.py  dataset.py  engine.py  quickdraw.py
src/picassbot/planning/: base.py  latent_mpc.py  make_gifs.py  run_experiments.py  strategies.py  strategies_header.py
src/picassbot/policy/: evaluate_jepa.py  inference.py  jepa_model.py  joint_dataset.py  joint_model.py  model.py  predictor.py  predictor_data.py  train.py  train_jepa.py  train_joint.py  train_policy_only.py  train_predictor.py
