[project]
name = "picassbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Raphael Jean", email = "raphael.jean.professionnel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
